--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "compile": "tsc --noEmit",
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "publish": "tsx publish.ts"
   },
   "devDependencies": {
     "@types/webextension-polyfill": "^0.12.1",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.2",
     "vite": "^5.4.8",
     "vite-plugin-web-extension": "^4.2.0",
-    "webextension-polyfill": "^0.12.0"
+    "webextension-polyfill": "^0.12.0",
+    "zip-a-folder": "^3.1.8"
   }
 }
