--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "devDependencies": {
     "@types/webextension-polyfill": "^0.12.1",
+    "chrome-webstore-upload": "^3.1.4",
+    "dotenv": "^16.4.5",
     "tsx": "^4.19.2",
     "typescript": "^5.6.2",
     "vite": "^5.4.8",
